--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
    <img src="images/lab1-3.gif"> 
    <h1>Lab2-1</h1> 
     <img src="images/lab2-1a.jpg">
+   <img src="images/quote1.jpg">
+    <img src="images/quote2.jpg">
+    <img src="images/quote3.jpg">
+    <img src="images/quote4.jpg">
+    <img src="images/quote5.jpg">
+    <img src="images/quote6.jpg">
+    <img src="images/quote7.jpg">
+    <img src="images/quote8.jpg">
+    <img src="images/quote9.jpg">
     <h1>Lab2-2</h1>
-    <img src="images/lab2-2.jpg">
+   <img src="images/lab2-2.jpg">
     <h1>Lab2-3</h1>
     <img src="images/lab2-3.jpg">
     <h1>Lab3-1</h1>
