--- a/index.html
+++ b/index.html
@@ -7,71 +7,16 @@
 </head>
 
 <body>
-
-<h1>Lab1-1</h1>    
-<img src="images/1-1.gif">    
- <h1>Lab1-2</h1>   
-  <img src="images/lab1-2.gif">  
-  <h1>Lab1-3</h1>
-   <img src="images/lab1-3.gif"> 
-   <h1>Lab2-1</h1> 
-    <img src="images/lab2-1a.jpg">
-   <img src="images/quote1.jpg">
-    <img src="images/quote2.jpg">
-    <img src="images/quote3.jpg">
-    <img src="images/quote4.jpg">
-    <img src="images/quote5.jpg">
-    <img src="images/quote6.jpg">
-    <img src="images/quote7.jpg">
-    <img src="images/quote8.jpg">
-    <img src="images/quote9.jpg">
-    <h1>Lab2-2</h1>
-   <img src="images/lab2-2.jpg">
-    <h1>Lab2-3</h1>
-    <img src="images/lab2-3.jpg">
-    <h1>Lab3-1</h1>
-    <img src="images/lab3-1a.jpg">
-    <img src="images/lab3-1b.jpg">
-    <img src="images/lab3-1c.jpg">
-    <img src="images/lab3-1d.jpg">
-    <img src="images/lab3-1e.jpg">
-    <h1>Lab3-2</h1>
-    <img src="images/lab3-2a.gif">
-    <img src="images/lab3-2b.jpg">
-    <h1>Lab4-1</h1>
-    <img src="images/lab4-1.gif">
-    <h1>Lab4-2</h1>
-    <img src="images/lab4-2.jpg">
-    <h1>Lab4-3</h1>
-    <img src="images/lab4-3.jpg">
-    <h1>Lab4-4</h1>
-    <img src="images/lab4-4.jpg">
-    <h1>Lab5-1</h1>
-    <img src="images/lab5-1.jpg">
-    <h1>Lab5-2</h1>
-    <img src="images/lab5-2.jpg">
-    <h1>Lab6-1</h1>
-    <img src="images/lab6-1.png">
-    <h1>Lab6-2</h1>
-    <img src="images/lab6-2.png">
-    <h1>Lab7-1</h1>
-    <img src="images/lab7-1.png">
-    <h1>lab7-2</h1>
-    <img src="images/lab7-2.png">
-    <h1>lab7-3</h1>
-    <img src="images/lab7-3.png">
-    <h1>lab7-4</h1>
-    <img src="images/lab7-4.png">
-    <h1>lab8-1</h1>
-    <img src="images/lab8-1.png">
-    <h1>lab8-2</h1>
-    <img src="images/lab8-2a.jpg">
-    <h1>Lab9-1</h1>
-    <img src="images/lab9-1.gif">
-    <h1>Lab9-2</h1>
-    <img src="images/lab9-2b.gif">
-    <h1>Lab9-3</h1>
-    <img src="images/lab9-3.gif">
+<h1>Gimp Lessons</h1>
+<a href="GimpPages/Gimp1.html">Lesson1</a>
+   <a href="GimpPages/Gimp2.html">Lesson2</a>
+    <a href="GimpPages/Gimp3.html">Lesson3</a>
+    <a href="GimpPages/Gimp4.html">Lesson4</a>
+   <a href="GimpPages/Gimp5.html">Lesson5</a>
+   <a href="GimpPages/Gimp6.html">Lesson6</a>
+   <a href="GimpPages/Gimp7.html">Lesson7</a>
+   <a href="GimpPages/Gimp8.html">Lesson8</a>
+    <a href="GimpPages/Gimp9.html">Lesson9</a>
     <h1>Lab10-1</h1>
     <img src="images/lab10-1.jpg">
     <h1>Lab10-2</h1>
