--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1>Gimp Lessons</h1>
-<a href="GimpPages/Gimp1.html">Lesson1</a>
+<a href="GimpPages/Gimp1.html"><img src="images/title1.jpg"</a>
    <a href="GimpPages/Gimp2.html">Lesson2</a>
     <a href="GimpPages/Gimp3.html">Lesson3</a>
     <a href="GimpPages/Gimp4.html">Lesson4</a>
