--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
 <h1>Gimp Lessons</h1>
-<a href="GimpPages/Gimp1.html"><img src="images/title1.jpg"</a>
-   <a href="GimpPages/Gimp2.html"><img src="images/title2.jpg"</a>
-    <a href="GimpPages/Gimp3.html"><img src="images/title3.jpg"</a>
+<a href="GimpPages/Gimp1.html"><img style="width: 250px" src="images/title1.jpg"</a>
+   <a href="GimpPages/Gimp2.html"><img style="width: 250px" src="images/title2.jpg"</a>
+    <a href="GimpPages/Gimp3.html"><img style="width: 250px" src="images/title3.jpg"</a>
     <a href="GimpPages/Gimp4.html">Lesson4</a>
    <a href="GimpPages/Gimp5.html">Lesson5</a>
    <a href="GimpPages/Gimp6.html">Lesson6</a>
