--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <a href="GimpPages/Gimp1.html"><img style="width: 250px" src="images/title1.jpg"</a>
    <a href="GimpPages/Gimp2.html"><img style="width: 250px" src="images/title2.jpg"</a>
     <a href="GimpPages/Gimp3.html"><img style="width: 250px" src="images/title3.jpg"</a>
-    <a href="GimpPages/Gimp4.html">Lesson4</a>
-   <a href="GimpPages/Gimp5.html">Lesson5</a>
+    <a href="GimpPages/Gimp4.html"><img style="width: 250px" src="images/title4.jpg"</a>
+   <a href="GimpPages/Gimp5.html"><img style="width: 250px" src="images/title5.jpg"</a>
    <a href="GimpPages/Gimp6.html">Lesson6</a>
    <a href="GimpPages/Gimp7.html">Lesson7</a>
    <a href="GimpPages/Gimp8.html">Lesson8</a>
