--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="GimpPages/Gimp3.html"><img style="width: 250px" src="images/title3.jpg"</a>
     <a href="GimpPages/Gimp4.html"><img style="width: 250px" src="images/title4.jpg"</a>
    <a href="GimpPages/Gimp5.html"><img style="width: 250px" src="images/title5.jpg"</a>
-   <a href="GimpPages/Gimp6.html">Lesson6</a>
+   <a href="GimpPages/Gimp6.html"><img style="width: 250px" src="images/title6.jpg"</a>
    <a href="GimpPages/Gimp7.html">Lesson7</a>
    <a href="GimpPages/Gimp8.html">Lesson8</a>
     <a href="GimpPages/Gimp9.html">Lesson9</a>
