--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <a href="GimpPages/Gimp5.html"><img style="width: 250px" src="images/title5.jpg"</a>
    <a href="GimpPages/Gimp6.html"><img style="width: 250px" src="images/title6.jpg"</a>
    <a href="GimpPages/Gimp7.html"><img style="width: 250px" src="images/title7.jpg"</a>
-   <a href="GimpPages/Gimp8.html">Lesson8</a>
+   <a href="GimpPages/Gimp8.html"><img style="width: 250px" src="images/title8.jpg"</a>
     <a href="GimpPages/Gimp9.html">Lesson9</a>
     <h1>Lab10-1</h1>
     <img src="images/lab10-1.jpg">
