--- a/GimpPages/Gimp10.html
+++ b/GimpPages/Gimp10.html
@@ -8,6 +8,20 @@
 
 <body>
 <a href="../index.html">Home</a>
-    
+   <h1>Lab10-1</h1>
+    <img src="images/lab10-1.jpg">
+    <h1>Lab10-2</h1>
+    <img src="images/lab10-2.jpg">
+    <h1>Lab10-3</h1>
+    <img src="images/lab10-3.jpg">
+    <img src="images/lab10-3blkandwhit.jpg">
+    <h1>Lab10-5</h1>
+    <img src="images/lab10-5.jpg">
+    <h1>Lab10-10</h1>
+    <img src="images/lab10-10.jpg">
+    <h1>Lab10-11</h1>
+    <img src="images/lab10-11.jpg">
+    <h1>Lab10-12</h1>
+    <img src="images/bunny.png">  
 </body>
 </html>
