--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <a href="GimpPages/Gimp6.html"><img style="width: 250px" src="images/title6.jpg"</a>
    <a href="GimpPages/Gimp7.html"><img style="width: 250px" src="images/title7.jpg"</a>
    <a href="GimpPages/Gimp8.html"><img style="width: 250px" src="images/title8.jpg"</a>
-    <a href="GimpPages/Gimp9.html">Lesson9</a>
+    <a href="GimpPages/Gimp9.html"><img style="width: 250px" src="images/title9.jpg"</a>
    <a href="GimpPages/Gimp10.html">Lesson10</a>
     
        
