--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <a href="GimpPages/Gimp7.html"><img style="width: 250px" src="images/title7.jpg"</a>
    <a href="GimpPages/Gimp8.html"><img style="width: 250px" src="images/title8.jpg"</a>
     <a href="GimpPages/Gimp9.html"><img style="width: 250px" src="images/title9.jpg"</a>
-   <a href="GimpPages/Gimp10.html">Lesson10</a>
+   <a href="GimpPages/Gimp10.html"><img style="width: 250px" src="images/title10.jpg"</a>
        <div>
         
         </div>
